--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "lib/index.d.ts",
   "type": "module",
   "scripts": {
-    "test": "jest --config jestconfig.json",
+    "test": "mocha 'test/**/*.ts'",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
@@ -28,12 +28,16 @@
   },
   "homepage": "https://github.com/udomnohara/Nohara-Custom-Method#readme",
   "devDependencies": {
-    "@types/jest": "^29.4.0",
-    "jest": "^29.4.2",
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
     "prettier": "^2.8.4",
-    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1"
   }
 }
